--- a/src/main/resources/templates/missing.html
+++ b/src/main/resources/templates/missing.html
@@ -56,7 +56,7 @@
     <div class="collapse navbar-collapse" id="ftco-nav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item"><a href="http://localhost:8080/index" class="nav-link">首頁</a></li>
-        <li class="nav-item"><a href="http://localhost:8080/pubic_shelter" class="nav-link">公立領養</a></li>
+        <li class="nav-item"><a href="http://localhost:8080/public_shelter" class="nav-link">公立領養</a></li>
         <li class="nav-item"><a href="http://localhost:8080/personal_shelter" class="nav-link">一般領養</a></li>
         <li class="nav-item"><a href="http://localhost:8080/publish" class="nav-link">刊登送養</a></li>
         <li class="nav-item active"><a href="http://localhost:8080/missing" class="nav-link">走失協尋</a></li>
