--- a/src/main/resources/templates/public_shelter.html
+++ b/src/main/resources/templates/public_shelter.html
@@ -56,13 +56,12 @@
         </button>
         <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav ml-auto">
-
                 <li class="nav-item"><a href="http://localhost:8080/index" class="nav-link">首頁</a></li>
-                <li class="nav-item active"><a href="http://localhost:8080/pubic_shelter" class="nav-link">公立領養</a></li>
+                <li class="nav-item active"><a href="http://localhost:8080/public_shelter" class="nav-link">公立領養</a></li>
                 <li class="nav-item"><a href="http://localhost:8080/personal_shelter" class="nav-link">一般領養</a></li>
                 <li class="nav-item"><a href="http://localhost:8080/publish" class="nav-link">刊登送養</a></li>
                 <li class="nav-item"><a href="http://localhost:8080/missing" class="nav-link">走失協尋</a></li>
-                <li class="nav-item"><a href="http://localhost:8080/animal_hospital" class="nav-link">動物醫院</a></li>
+                <li class="nav-item "><a href="http://localhost:8080/animal_hospital" class="nav-link">動物醫院</a></li>
                 <li class="nav-item"><a href="http://localhost:8080/funeral" class="nav-link">寵物送別</a></li>
                 <li class="nav-item"><a href="http://localhost:8080/login_register" class="nav-link">登入註冊</a></li>
             </ul>
@@ -77,8 +76,7 @@
         <div class="row no-gutters slider-text align-items-end">
             <div class="col-md-9 ftco-animate pb-5">
                 <p class="breadcrumbs mb-2"><span class="mr-2"><a href="http://localhost:8080/index">首頁 <i
-                        class="ion-ios-arrow-forward"></i></a></span>
-                    <span>公立領養 <i class="ion-ios-arrow-forward"></i></span>
+                        class="ion-ios-arrow-forward"></i></a></span> <span>公立領養 <i class="ion-ios-arrow-forward"></i></span>
                 </p>
                 <h1 class="mb-0 bread">公立領養</h1>
             </div>
