--- a/src/main/resources/templates/personal_shelter.html
+++ b/src/main/resources/templates/personal_shelter.html
@@ -81,92 +81,67 @@
     </div>
 </section>
 
-<!--員工修改的狀態框-->
-<div class="modal fade" id="empUpdateModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
+                <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="myModalLabel">編輯員工</h4>
             </div>
             <div class="modal-body">
-                <!--表單項-->
-                <form class="form-horizontal">
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">帳號</label>
-                        <div class="col-sm-10">
-                            <p class="form-control-static" id="username_update_static"></p>
-                        </div>
+                <div class="form-group">
+                    <div class="col-sm-10">
+                        <label class="col-sm-2 control-label">ID:</label>
+                        <label class="form-control-static" id="animalId_static"></label><br>
+                        <label class="col-sm-2 control-label">ID:</label>
+                        <label class="form-control-static" id="animalKind_static"></label><br>
+                        <label class="col-sm-2 control-label">ID:</label>
+                        <label class="form-control-static" id="animalVariety_static"></label><br>
+                        <label class="col-sm-2 control-label">ID:</label>
+                        <label class="form-control-static" id="animalSex_static"></label><br>
+                        <label class="col-sm-2 control-label">ID:</label>
+                        <label class="form-control-static" id="animalSterilization_static"></label><br>
+                        <label class="col-sm-2 control-label">ID:</label>
+                        <label class="form-control-static" id="animalBacterin_static"></label><br>
+                        <label class="col-sm-2 control-label">ID:</label>
+                        <label class="form-control-static" id="imageUrl_static"></label><br>
+                        <label class="col-sm-2 control-label">ID:</label>
+                        <label class="form-control-static" id="description_static"></label><br>
+                        <label class="col-sm-2 control-label">ID:</label>
+                        <label class="form-control-static" id="createdDate_static"></label><br>
+                        <label class="col-sm-2 control-label">ID:</label>
+                        <label class="form-control-static" id="lastModifiedDate_static"></label><br>
                     </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">密碼</label>
-                        <div class="col-sm-10">
-                            <input type="text" name="password" class="form-control" id="password_update_input" placeholder="請輸入密碼">
-                            <span class="help-block"></span>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">姓名</label>
-                        <div class="col-sm-10">
-                            <input type="text" name="name" class="form-control" id="name_update_input" placeholder="請輸入姓名">
-                            <span class="help-block"></span>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">職稱</label>
-                        <div class="col-sm-10">
-                            <input type="text" name="position" class="form-control" id="position_update_input" placeholder="請輸入職稱">
-                            <span class="help-block"></span>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">軍種</label>
-                        <div class="col-sm-3">
-                            <!--部門提交部門id即可-->
-                            <select class="form-control" name="armyId" id="army_update_select">
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">單位名稱</label>
-                            <div class="col-sm-3">
-                                <!--部門提交部門id即可-->
-                                <select class="form-control" name="employerId" id="employer_update_select">
-                                </select>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">信箱</label>
-                            <div class="col-sm-10">
-                                <input type="text" name="email" class="form-control" id="email_update_input" placeholder="請輸入信箱">
-                                <span class="help-block"></span>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">電話</label>
-                            <div class="col-sm-10">
-                                <input type="text" name="phone" class="form-control" id="phone_update_input" placeholder="請輸入電話">
-                                <span class="help-block"></span>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">IP地址</label>
-                            <div class="col-sm-10">
-                                <input type="text" name="ip" class="form-control" id="ip_update_input" placeholder="請輸入IP地址">
-                                <span class="help-block"></span>
-                            </div>
-                        </div>
-                    </div>
-                </form>
+                </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">關閉</button>
-                <button type="button" class="btn btn-primary" id="emp_update_btn">修改</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
 </div>
 
+
+
+<hr>
+<div style="margin: auto; width: 600px;">
+    物種 :
+    <select name="animalKind" id="kind">
+        <option>不分種類</option>
+        <option>狗</option>
+        <option>貓</option>
+        <option>其他</option>
+    </select>
+    性別 :
+    <select name="animalSex" id="sex">
+        <option>不分種類</option>
+        <option>公</option>
+        <option>母</option>
+    </select>
+</div>
 
 <section class="ftco-section bg-light">
     <div class="container">
@@ -174,6 +149,17 @@
         </div>
     </div>
 </section>
+
+<div style="margin: auto; width: 220px;">
+    <button onclick="goPrePage()">上一頁</button>
+    <select id="page" onchange="sendPageToServer()">
+
+        <option th:each="i:${pages}" th:text="${i}"></option>
+
+
+    </select>
+    <button onclick="goNextPage()">下一頁</button>
+</div>
 
 <footer class="footer">
     <div class="row mt-5">
@@ -226,9 +212,9 @@
         url: "/personalAnimals",
         success: function (data) {
             getAnimalList(data);
-            // console.log(data["limit"]);
-            // console.log(data["offset"]);
-            // console.log(data["total"]);
+            console.log(data["limit"]);
+            console.log(data["offset"]);
+            console.log(data["total"]);
             // console.log(data["results"]);
             // console.log(data["results"][0]);
             // console.log(data["results"][0]["animalId"]);
@@ -245,20 +231,23 @@
     function getAnimalList(data) {
         $("#test1Result").empty();
         $.each(data["results"], function (index, item) {
-            var html = "<div class=\"col-md-6 col-lg-3 ftco-animate\">" +
-                "                <div class=\"staff\">" +
-                "                    <div class=\"img-wrap d-flex align-items-stretch\">" +
-                "                        <div class=\"work mb-4 img d-flex align-items-end\" style=\"background-image: url("+item.imageUrl+");\">" +
+            var html = "<div class='col-md-6 col-lg-3 ftco-animate'>" +
+                "                <div class='staff'>" +
+                "                    <div class='img-wrap d-flex align-items-stretch'>" +
+                "                        <div class='work mb-4 img d-flex align-items-end' style='background-image: url("+item.imageUrl+");'>" +
                 "                        </div>" +
                 "                    </div>" +
-                "                    <div class=\"text pt-3 px-3 pb-4 text-center\" onclick=\"getAnimalInfo(this)\" style=\"cursor: pointer;\">" +
+                "                    <div class='text pt-3 px-3 pb-4 text-center' style='cursor: pointer;'>" +
                 "                        <h3 id='"+item.animalId+"'>編號: "+item.animalId+"</h3>" +
-                "                        <div class=\"faded\">" +
+                "                        <div class='faded'>" +
                 "                                <p>物種: "+item.animalKind+"</p>" +
                 "                                <p>品種: "+item.animalVariety+"</p>" +
                 "                                <p>性別: "+item.animalSex+"</p>" +
                 "                                <p>日期: "+item.lastModifiedDate+"</p>" +
                 "                        </div>" +
+                "<button type='button' onclick='getAnimalInfo(this)' class='btn btn-primary' data-toggle='modal' data-target='#exampleModalCenter'>" +
+                "    詳細資料" +
+                "</button>" +
                 "                    </div>" +
                 "                </div>" +
                 "            </div>";
@@ -268,34 +257,23 @@
         })
     }
 
-    function getAnimalInfo(x) {
+    function getAnimalInfo(gid) {
 
-        var id = $(x).find("h3").attr("id");
+        var id = $(gid).siblings("h3").attr("id");
+        console.log(gid);
         $.ajax({
             type: "GET",
             url: "/personalAnimals/"+id,
             success: function (data) {
+                $("#animalId_static").text(data.animalId);
 
-
-                alert("編號:"+data.animalId+"\n物種:"+data.animalKind+"\n品種:"+data.animalVariety+"\n性別:"+data.animalSex+"\n絕育:"+data.animalSterilization+"\n疫苗:"+data.animalBacterin+
+                console.log("編號:"+data.animalId+"\n物種:"+data.animalKind+"\n品種:"+data.animalVariety+"\n性別:"+data.animalSex+"\n絕育:"+data.animalSterilization+"\n疫苗:"+data.animalBacterin+
                     "\n圖片:"+data.imageUrl+"\n備註:"+data.description+"\n刊登日期:"+data.createdDate+"\n更新日期:"+data.lastModifiedDate);
 
             }
         });
-
     }
 
-    //點擊新增按鈕跳出添加視窗
-    $("#emp_add_modal_btn").click(function () {
-
-        //清除表單數據
-        $("#empAddModal form")[0].reset();
-
-        $("#empAddModal").modal({
-            //點擊背景框框不會消失
-            backdrop:"static"
-        });
-    });
 
 </script>
 
