--- a/src/main/resources/templates/funeral.html
+++ b/src/main/resources/templates/funeral.html
@@ -2,181 +2,186 @@
 <html lang="en">
 
 <head>
-  <title>寵物送別 -寵物資訊平台</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>寵物送別 -寵物資訊平台</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap"
+          rel="stylesheet">
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/animate.css">
 
-  <link rel="stylesheet" href="css/owl.carousel.min.css">
-  <link rel="stylesheet" href="css/owl.theme.default.min.css">
-  <link rel="stylesheet" href="css/magnific-popup.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/magnific-popup.css">
 
 
-  <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-  <link rel="stylesheet" href="css/jquery.timepicker.css">
+    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="css/jquery.timepicker.css">
 
-  <link rel="stylesheet" href="css/flaticon.css">
-  <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/flaticon.css">
+    <link rel="stylesheet" href="css/style.css">
 
-  <style>
-    table {
-      border-collapse: collapse;}
-    table,
-    th{
-      text-align: center;
-      border: 2px solid orange;
-      height: 50px;}
-    td {
-      text-align: left;
-      border: 2px solid orange;
-      height: 50px;}
-  </style>
+    <style>
+        table {
+            border-collapse: collapse;}
+        table,
+        th{
+            text-align: center;
+            border: 2px solid orange;
+            height: 50px;}
+        td {
+            text-align: left;
+            border: 2px solid orange;
+            height: 50px;}
+
+        a {
+            color:black;
+        ;
+        }
+    </style>
 
 </head>
 
 <body>
 
 <div class="wrap">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 d-flex align-items-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 d-flex align-items-center">
 
-      </div>
-      <div class="col-md-6 d-flex justify-content-md-end">
-        <div class="social-media">
-          <p class="mb-0 d-flex">
-            <a href="#" class="d-flex align-items-center justify-content-center"></a>
-            <a href="#" class="d-flex align-items-center justify-content-center"></a>
-            <a href="#" class="d-flex align-items-center justify-content-center"></a>
-            <a href="#" class="d-flex align-items-center justify-content-center"></a>
-          </p>
+            </div>
+            <div class="col-md-6 d-flex justify-content-md-end">
+                <div class="social-media">
+                    <p class="mb-0 d-flex">
+                        <a href="#" class="d-flex align-items-center justify-content-center"></a>
+                        <a href="#" class="d-flex align-items-center justify-content-center"></a>
+                        <a href="#" class="d-flex align-items-center justify-content-center"></a>
+                        <a href="#" class="d-flex align-items-center justify-content-center"></a>
+                    </p>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </div>
 
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-  <div class="container">
-    <a class="navbar-brand" href="http://localhost:8080/index"><span class="flaticon-pawprint-1 mr-2"></span>寵物資訊平台</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
-            aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="fa fa-bars"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="ftco-nav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a href="http://localhost:8080/index" class="nav-link">首頁</a></li>
-        <li class="nav-item"><a href="http://localhost:8080/public_shelter" class="nav-link">公立領養</a></li>
-        <li class="nav-item"><a href="http://localhost:8080/personal_shelter" class="nav-link">一般領養</a></li>
-        <li class="nav-item"><a href="http://localhost:8080/publish" class="nav-link">刊登送養</a></li>
-        <li class="nav-item"><a href="http://localhost:8080/missing" class="nav-link">走失協尋</a></li>
-        <li class="nav-item"><a href="http://localhost:8080/animal_hospital" class="nav-link">動物醫院</a></li>
-        <li class="nav-item active"><a href="http://localhost:8080/funeral" class="nav-link">寵物送別</a></li>
-        <li class="nav-item"><a href="http://localhost:8080/login_register" class="nav-link">登入註冊</a></li>
-      </ul>
+    <div class="container">
+        <a class="navbar-brand" href="http://localhost:8080/index"><span class="flaticon-pawprint-1 mr-2"></span>寵物資訊平台</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+                aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="fa fa-bars"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="ftco-nav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a href="http://localhost:8080/index" class="nav-link">首頁</a></li>
+                <li class="nav-item"><a href="http://localhost:8080/public_shelter" class="nav-link">公立領養</a></li>
+                <li class="nav-item"><a href="http://localhost:8080/personal_shelter" class="nav-link">一般領養</a></li>
+                <li class="nav-item"><a href="http://localhost:8080/publish" class="nav-link">刊登送養</a></li>
+                <li class="nav-item"><a href="http://localhost:8080/missing" class="nav-link">走失協尋</a></li>
+                <li class="nav-item"><a href="http://localhost:8080/animal_hospital" class="nav-link">動物醫院</a></li>
+                <li class="nav-item active"><a href="http://localhost:8080/funeral" class="nav-link">寵物送別</a></li>
+                <li class="nav-item"><a href="http://localhost:8080/login_register" class="nav-link">登入註冊</a></li>
+            </ul>
+        </div>
     </div>
-  </div>
 </nav>
 <!-- END nav -->
 <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');"
          data-stellar-background-ratio="0.5">
-  <div class="overlay"></div>
-  <div class="container">
-    <div class="row no-gutters slider-text align-items-end">
-      <div class="col-md-9 ftco-animate pb-5">
-        <p class="breadcrumbs mb-2"><span class="mr-2"><a href="http://localhost:8080/index">首頁 <i
-                class="ion-ios-arrow-forward"></i></a></span> <span>> 寵物送別<i class="ion-ios-arrow-forward"></i></span>
-        </p>
-        <h1 class="mb-0 bread">寵物送別</h1>
-      </div>
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row no-gutters slider-text align-items-end">
+            <div class="col-md-9 ftco-animate pb-5">
+                <p class="breadcrumbs mb-2"><span class="mr-2"><a href="http://localhost:8080/index">首頁 <i
+                        class="ion-ios-arrow-forward"></i></a></span> <span>> 寵物送別<i class="ion-ios-arrow-forward"></i></span>
+                </p>
+                <h1 class="mb-0 bread">寵物送別</h1>
+            </div>
+        </div>
     </div>
-  </div>
 </section>
 
 <section class="ftco-section bg-light">
-  <div class="container">
-    <div class="row justify-content-center pb-5 mb-3">
+    <div class="container">
+        <div class="row justify-content-center pb-5 mb-3">
 
-      <table width="100%">
-        <tr>
-          <th width="25%">名稱</th>
-          <th width="15%">電話</th>
-          <th width="30%">地址</th>
-          <th width="40%">服務項目</th>
-        </tr>
-        <tr>
-          <td>臺北市動物保護處</td>
-          <td>(02)87913254</td>
-          <td>台北市內湖區潭美街852號</td>
-          <td>政府機關提供寵物焚化服務</td>
-        </tr>
-        <tr>
-          <td> 新北市政府動物保護防疫處</td>
-          <td> (02)29596353</td>
-          <td> 新北市板橋區四川路一段157巷2號</td>
-          <td> 政府機關提供寵物焚化服務</td>
-        </tr>
-        <tr>
-          <td>宜蘭縣動植物防疫所</td>
-          <td>(03)9602350</td>
-          <td>宜蘭縣五結鄉成興村利寶路60號</td>
-          <td>政府機關提供寵物焚化服務</td>
-        </tr>
-        <tr>
-          <td>臺中市動物保護防疫處</td>
-          <td>(04)23869420</td>
-          <td>台中市南屯區萬和路一段28-18號</td>
-          <td>政府機關提供寵物焚化服務</td>
-        </tr>
-        <tr>
-          <td>嘉義市動物保護教育園區</td>
-          <td>(05)2168661</td>
-          <td>嘉義市東區芳草里彌陀路31號</td>
-          <td>政府機關提供寵物焚化服務</td>
-        </tr>
-        <tr>
-          <td>臺南市動物防疫保護處</td>
-          <td>(06)6323039</td>
-          <td>台南市新營區長榮路一段501號</td>
-          <td>政府機關提供寵物焚化服務</td>
-        </tr>
-        <tr>
-          <td>高雄市壽山動物保護教育園區</td>
-          <td>(07)5519059</td>
-          <td>高雄市鼓山區萬壽路350號</td>
-          <td>政府機關提供寵物焚化服務</td>
-        </tr>
-        <tr>
-          <td>高雄市燕巢動物保護關愛園區</td>
-          <td>(07)6051002</td>
-          <td>高雄市燕巢區燕巢區師大路98號	</td>
-          <td>政府機關提供寵物焚化服務	</td>
-        </tr>
-        <tr>
-          <td>宜蘭縣動植物防疫所</td>
-          <td>(03)9602350</td>
-          <td>宜蘭縣五結鄉成興村利寶路60號</td>
-          <td>政府機關提供寵物焚化服務</td>
-        </tr>
-        <tr>
-          <td>花蓮市動植物防疫所</td>
-          <td>(03)8227431</td>
-          <td>花蓮縣花蓮市瑞美路5號	</td>
-          <td>政府機關提供寵物焚化服務</td>
-        </tr>
-        <tr>
-          <td>澎湖縣家畜疾病防治所</td>
-          <td>(06)9212839</td>
-          <td>澎湖縣馬公市西文里118之1號</td>
-          <td>政府機關提供寵物焚化服務</td>
-        </tr>
-      </table>
+            <table width="100%">
+                <tr>
+                    <th width="25%">名稱</th>
+                    <th width="15%">電話</th>
+                    <th width="30%">地址</th>
+                    <th width="40%">服務項目</th>
+                </tr>
+                <tr>
+                    <td><a href="https://www.tcapo.gov.taipei/cp.aspx?n=1F425FA2E64328D4" target="_blank">臺北市動物保護處</a></td>
+                    <td>(02)87913254</td>
+                    <td>台北市內湖區潭美街852號</td>
+                    <td>政府機關提供寵物焚化服務</td>
+                </tr>
+                <tr>
+                    <td><a href="https://www.ahiqo.ntpc.gov.tw/cht/index.php?code=list&flag=detail&ids=15&article_id=346" target="_blank">新北市政府動物保護防疫處</a></td>
+                    <td> (02)29596353</td>
+                    <td> 新北市板橋區四川路一段157巷2號</td>
+                    <td> 政府機關提供寵物焚化服務</td>
+                </tr>
+                <tr>
+                    <td><a href="https://animal.e-land.gov.tw/" target="_blank">宜蘭縣動植物防疫所</a></td>
+                    <td>(03)9602350</td>
+                    <td>宜蘭縣五結鄉成興村利寶路60號</td>
+                    <td>政府機關提供寵物焚化服務</td>
+                </tr>
+                <tr>
+                    <td><a href="https://www.animal.taichung.gov.tw/" target="_blank">臺中市動物保護防疫處</a></td>
+                    <td>(04)23869420</td>
+                    <td>台中市南屯區萬和路一段28-18號</td>
+                    <td>政府機關提供寵物焚化服務</td>
+                </tr>
+                <tr>
+                    <td><a href="http://dog.chiayi.gov.tw/" target="_blank">嘉義市動物保護教育園區</a></td>
+                    <td>(05)2168661</td>
+                    <td>嘉義市東區芳草里彌陀路31號</td>
+                    <td>政府機關提供寵物焚化服務</td>
+                </tr>
+                <tr>
+                    <td><a href="https://ahipo.tainan.gov.tw/" target="_blank">臺南市動物防疫保護處</a></td>
+                    <td>(06)6323039</td>
+                    <td>台南市新營區長榮路一段501號</td>
+                    <td>政府機關提供寵物焚化服務</td>
+                </tr>
+                <tr>
+                    <td><a href="https://livestock.kcg.gov.tw/" target="_blank">高雄市壽山動物保護教育園區</a></td>
+                    <td>(07)5519059</td>
+                    <td>高雄市鼓山區萬壽路350號</td>
+                    <td>政府機關提供寵物焚化服務</td>
+                </tr>
+                <tr>
+                    <td><a href="https://livestock.kcg.gov.tw/" target="_blank">高雄市燕巢動物保護關愛園區</a></td>
+                    <td>(07)6051002</td>
+                    <td>高雄市燕巢區燕巢區師大路98號	</td>
+                    <td>政府機關提供寵物焚化服務	</td>
+                </tr>
+                <tr>
+                    <td><a href="https://animal.e-land.gov.tw/" target="_blank">宜蘭縣動植物防疫所</a></td>
+                    <td>(03)9602350</td>
+                    <td>宜蘭縣五結鄉成興村利寶路60號</td>
+                    <td>政府機關提供寵物焚化服務</td>
+                </tr>
+                <tr>
+                    <td><a href="https://acdc.hl.gov.tw/" target="_blank">花蓮市動植物防疫所</a></td>
+                    <td>(03)8227431</td>
+                    <td>花蓮縣花蓮市瑞美路5號	</td>
+                    <td>政府機關提供寵物焚化服務</td>
+                </tr>
+                <tr>
+                    <td><a href="https://www.phldcc.gov.tw/" target="_blank">澎湖縣家畜疾病防治所</a></td>
+                    <td>(06)9212839</td>
+                    <td>澎湖縣馬公市西文里118之1號</td>
+                    <td>政府機關提供寵物焚化服務</td>
+                </tr>
+            </table>
 </body>
 </html>
 </div>
@@ -184,35 +189,35 @@
 </section>
 
 <section class="ftco-section bg-light">
-  <div class="row mt-5">
-    <div class="col text-center">
-      <div class="block-27">
-        <ul>
-          <li><a href="#">&lt;</a></li>
-          <li class="active"><span>1</span></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">&gt;</a></li>
-        </ul>
-      </div>
+    <div class="row mt-5">
+        <div class="col text-center">
+            <div class="block-27">
+                <ul>
+                    <li><a href="#">&lt;</a></li>
+                    <li class="active"><span>1</span></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">&gt;</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
-  </div>
-  </div>
+    </div>
 </section>
 
 
 
 <footer class="footer">
-  <div class="row mt-5">
-    <div class="col-md-12 text-center">
-      <p class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-        Copyright &copy;
-        <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i
-                class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                                                                  target="_blank">Colorlib.com</a>
-        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-      </p>
+    <div class="row mt-5">
+        <div class="col-md-12 text-center">
+            <p class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                Copyright &copy;
+                <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i
+                        class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
+                                                                          target="_blank">Colorlib.com</a>
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            </p>
+        </div>
     </div>
-  </div>
 </footer>
 
 
@@ -220,9 +225,9 @@
 
 <!-- loader -->
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
-  <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
-  <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
-          stroke="#F96D00" />
+    <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
+    <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
+            stroke="#F96D00" />
 </svg></div>
 
 
